--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,7 +2,7 @@ name: Benchmark
 
 on:
   push:
-      branches: [devel]
+    branches: [devel]
   pull_request:
 
 jobs:
@@ -19,19 +19,13 @@ jobs:
         with:
           python-version: '3.12' 
 
-      - name: Install nerdctl
-        run: |
-          VERSION="1.7.7"  # Set the version you want to install
-          curl -LO https://github.com/containerd/nerdctl/releases/download/v$VERSION/nerdctl-$VERSION-linux-amd64.tar.gz
-          tar Cxzvvf /usr/local nerdctl-full-$VERSION-linux-amd64.tar.gz
-          sudo systemctl enable --now containerd
-      
       - name: Configure cvmfs-snapshotter
+        run: |
           cd snapshotter
           make
-          cp out/cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
-          cp config/etc/systemd/system/cvmfs-snapshotter.service /etc/systemd/system/
-          mkdir -p /etc/containerd-cvmfs-grpc && touch /etc/containerd-cvmfs-grpc/config.toml
+          sudo cp out/cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
+          sudo cp config/etc/systemd/system/cvmfs-snapshotter.service /etc/systemd/system/
+          sudo mkdir -p /etc/containerd-cvmfs-grpc && sudo touch /etc/containerd-cvmfs-grpc/config.toml
           sudo tee /etc/containerd/config.toml > /dev/null <<EOL
           version = 2
 
@@ -44,8 +38,13 @@ jobs:
                   type = "snapshot"
                   address = "/run/containerd-cvmfs-grpc/containerd-cvmfs-grpc.sock"
           EOL
-          
+
+      - name: Install nerdctl
+        run: |
+          VERSION="v1.7.7"  # Set the version you want to install
+          curl -LO https://github.com/containerd/nerdctl/releases/download/$VERSION/nerdctl-full-$VERSION-linux-amd64.tar.gz
+          sudo tar Cxzvvf /usr/local nerdctl-full-$VERSION-linux-amd64.tar.gz
+          sudo systemctl enable --now containerd
 
       - name: Run benchmark
         run: python3 snapshotter/benchmark.py
-
