--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -62,7 +62,7 @@ jobs:
           sudo systemctl start cvmfs-snapshotter
           sudo systemctl restart containerd
 
-          sleep 60
+          ss | grep cvmfs
           CVMFS_SOCK="/run/containerd-cvmfs-grpc/containerd-cvmfs-grpc.sock"
           if [ -S "$CVMFS_SOCK" ]; then
               echo "$CVMFS_SOCK exists."
