--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -70,15 +70,15 @@ jobs:
           sudo mount -t cvmfs unpacked.cern.ch /cvmfs/unpacked.cern.ch
 
           CVMFS_SOCK="/run/containerd-cvmfs-grpc/containerd-cvmfs-grpc.sock"
-          if [ -S "$CVMFS_SOCK" ]; then
+          if sudo [ -S "$CVMFS_SOCK" ]; then
               echo "$CVMFS_SOCK exists."
           else
               echo "$CVMFS_SOCK does not exist."
-              # exit 1
+              exit 1
           fi
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: Run benchmark
         run: python3 snapshotter/script/benchmark.py
