--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Install cvmfs-snapshotter
         run: |
           cd snapshotter
-          make
+          sudo make
           sudo cp out/cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
           sudo cp script/config/etc/systemd/system/cvmfs-snapshotter.service /etc/systemd/system/
           sudo mkdir -p /etc/containerd-cvmfs-grpc && sudo touch /etc/containerd-cvmfs-grpc/config.toml
