--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -47,13 +47,12 @@ jobs:
           sudo mkdir -p /cvmfs/unpacked.cern.ch
           sudo mount -t cvmfs unpacked.cern.ch /cvmfs/unpacked.cern.ch
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-
       - name: Install cvmfs-snapshotter
         run: |
           cd snapshotter
-          sudo make
+          go mod tidy
+          mkdir out
+          make
           sudo cp out/cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
           sudo cp script/config/etc/systemd/system/cvmfs-snapshotter.service /etc/systemd/system/
           sudo mkdir -p /etc/containerd-cvmfs-grpc && sudo touch /etc/containerd-cvmfs-grpc/config.toml
@@ -80,8 +79,6 @@ jobs:
               echo "$CVMFS_SOCK does not exist."
               exit 1
           fi
-
-
 
       - name: Run benchmark
         run: |
