--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -51,9 +51,8 @@ jobs:
         run: |
           cd snapshotter
           go mod tidy
-          mkdir out
-          make
-          sudo cp out/cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
+          go build -o cvmfs_snapshotter
+          sudo cp cvmfs_snapshotter /usr/local/bin/cvmfs_snapshotter
           sudo cp script/config/etc/systemd/system/cvmfs-snapshotter.service /etc/systemd/system/
           sudo mkdir -p /etc/containerd-cvmfs-grpc && sudo touch /etc/containerd-cvmfs-grpc/config.toml
           sudo tee /etc/containerd/config.toml > /dev/null <<EOL
