--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -84,5 +84,4 @@ jobs:
 
       - name: Run benchmark
         run: |
-          cd snapshotter/script
-          bash run.sh
+          bash snapshotter/script/benchmark.py
