--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -81,4 +81,4 @@ jobs:
 
       - name: Run benchmark
         run: |
-          bash snapshotter/script/benchmark.py
+          python3 snapshotter/script/benchmark.py
