--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -79,9 +79,9 @@ jobs:
               exit 1
           fi
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: Run benchmark
         run: |
-          python3 snapshotter/script/benchmark.py
+          sudo python3 snapshotter/script/benchmark.py
